* Added post time for digest.
* Added Scrnshots feed thanks to Logan Leger.
* Added Readernaut feed thanks to Logan Leger.
* The Xbox Live feed is now properly encoding your username if it had spaces.
* The lifestream_feedid_<N> class name is now the ID of the feed, and not the feed type.
* Added Last Update column to feed list.
* Added a setting for the number of items to display in the feed.

0.93b

* If a feed failed to refresh properly it was halting all feed updates.

0.93a

* XHTML issues with unclosed link tag on feed images.

0.93

* Changed users to use the `display_name` column.
* Fixed an issue with the GitHub feed and HTML entities.

0.92c

* Added lifestream_feed_<extension> class name to event wrappers.
* Added a link around the image in the default [lifestream] display. If it's a group it links to `Feed::get_public_url()`, and if it's not it links to the `link` property in the data.

0.92b

* Some XHTML/XSS cleanup.

0.92a

* Fixed an issue with the iTunes feed not showing reviews.

0.92

* Event->render() has been changed so $options is an optional argument.
* Enabled iBox support in the plugin.
* Refactored some image handling out of the Flickr class and into base class.
* Fixed a bug with SimplePie not retrieving the full image from Flickr.

0.91b

* Fixes an issue with links on version 2 feeds (using GUID).

0.91

* Any newly added feeds will now attempt to use the GUID as a key.
* Fixed an issue that was causing duplicate events when you added a new feed.

0.90b

* Updated localized strings.
* Added current version info to change log.

0.90a

* Change log will now pull directly from SVN.
* Updated icon for Last.fm.
* Deleting a feed will now use the lifestream_safe_query function, and raise an exception if there is an SQL error.

0.90

* Added icon_url global option for feeds.
* Added feed_label global option for feeds.
* RSS/Atom feeds will now use the the title + link as the key. Please note, that this only affects newly created feeds.

0.87
